--- a/maps/package.json
+++ b/maps/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@faker-js/faker": "^8.1.0"
+    "@faker-js/faker": "^8.1.0",
+    "@types/google.maps": "^3.54.7"
   },
   "devDependencies": {
     "buffer": "^6.0.3"
